# Rusted-Warfare-map-editor-for-city-occupation-play-

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  README.rst  Tutorial.md  cmake_install.sh  requirements.txt  rwgraph.py  setup.py
.github/workflows/: get-python-requirement.yml  get-python-requitement.yml  python-publish.yml
RWgraph_sub/: RWgraph_sub_default_name.txt  RWgraph_sub_name.txt
auto/: Velikie Luki 1942(1.0.1.0).tmx  __init__.py  _core.py  _data.py  auto_example.md  auto_example_tmp.html  auto_tutorial.md  auto_tutotial.md  auto_var_tutorial.md  error.txt  error_warning.txt  example1-1.tmx  example1-2.tmx  example1-3.tmx  example1-4.tmx  example1.tmx  tempCodeRunnerFile.py
auto/_app/: tempCodeRunnerFile.py  triggerauto.kv  triggerauto_apk_maker.py
auto/_data/: __init__.py  _bdtext.py  _building.py  _building_f.py  _const.py  _core.py  _dictionary.py  _flash.py  _idcheck.py  _inadd.py  _mtext.py  _multiAdd.py  _multiRemove.py  _multiText.py  _numDetect.py  _object.py  _step.py  _teamDetect.py  _time.py  _tree.py
auto/example/: auto_example.tmx  auto_example_answer.tmx  export.tmx  export_answer.tmx  new_map_1000.py  temp.py  (+1 more)
c_extension/: CMakeLists.txt
c_extension/include/: CIE2000.hpp  rwmapautoc_core.hpp  utility.hpp
c_extension/src/include/: CIE2000.cpp  utility.cpp
c_extension/src/rwmapautoc/: core.cpp  layerauto.cpp  tilesetauto.cpp
c_extension/test/: CIE2000.txt  utility.txt
command/: __init__.py  config.json  error_warning.txt
examples/: WITE1941底图-temp.tmx  temp.py
hexrwmap/: __init__.py  _const.py  _core.py
rwgraph/: __init__.py  _core.py
rwgraph_data/: RWgraph_sub_default_name.txt
rwmap/: __init__.py  _core.py  _exceptions.py
someargparse/: auto.py  auto_data.py  auto_tutotial.md  example1.tmx
sqrwmap/: __init__.py  _const.py  _core.py
(+318 files in other folders)
